--- a/Admin Panel/css/style.css
+++ b/Admin Panel/css/style.css
@@ -100,6 +100,22 @@ body {
   display: -ms-flexbox;
   display: flex;
   min-height: 100vh;
+  position: relative;
+}
+
+.main-container:before {
+  content: "";
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-image: url(../images/background.png);
+  z-index: -1;
 }
 
 .main-nav {
@@ -278,14 +294,37 @@ body {
           flex: 0 0 80px;
 }
 
+@media (max-width: 992px) {
+  .main-nav.collasep {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 60px;
+            flex: 0 0 60px;
+  }
+}
+
 .main-nav.collasep .nav {
   max-width: 60px;
   margin-left: 20px;
 }
 
+@media (max-width: 992px) {
+  .main-nav.collasep .nav {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 60px;
+            flex: 0 0 60px;
+    margin-left: 15px;
+  }
+}
+
 .main-nav.collasep .nav li a::before {
   width: 70px;
   left: 0px;
+}
+
+@media (max-width: 992px) {
+  .main-nav.collasep .nav li a::before {
+    width: 60px;
+  }
 }
 
 .main-nav.collasep .nav li a i {
@@ -318,7 +357,194 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  padding-left: 94px;
-  padding-right: 94px;
+  overflow: hidden;
+}
+
+@media (max-width: 767px) {
+  .main-content__header__content {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.main-content__header__summary {
+  padding-top: 30px;
+}
+
+.main-content__header__summary__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 30px;
+}
+
+.main-content__header__summary__item:last-child {
+  margin-right: 0px;
+}
+
+.main-content__header__summary__item img {
+  width: 20px;
+  height: auto;
+  margin-right: 5px;
+}
+
+.main-content__header__summary__item a {
+  font-size: 14px;
+  font-family: "Nunito", sans-serif;
+  position: relative;
+  top: 1px;
+  color: #000000;
+  line-height: 18px;
+}
+
+.main-content__header__summary__item a span {
+  border-bottom: 2px solid #00919966;
+}
+
+.main-content__header__summary__item a i {
+  font-weight: 300;
+  font-style: normal;
+}
+
+@media (max-width: 992px) {
+  .main-content__header__summary__item a i {
+    display: none !important;
+  }
+}
+
+.main-content__header__summary__item a b {
+  font-weight: 900;
+  padding-left: 10px;
+}
+
+@media (max-width: 992px) {
+  .main-content__header__summary__item a b {
+    padding-left: 0px;
+  }
+}
+
+.main-content__header__search {
+  margin-left: auto;
+  padding-top: 15px;
+}
+
+@media (max-width: 767px) {
+  .main-content__header__search {
+    margin-left: initial;
+    width: 100%;
+  }
+}
+
+.main-content__header__search__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: 2px solid #00919966;
+  width: 283px;
+}
+
+@media (max-width: 767px) {
+  .main-content__header__search__container {
+    width: 100%;
+  }
+}
+
+.main-content__header__search__container input,
+.main-content__header__search__container select {
+  border: 0;
+  background-color: #F0F7F7;
+  font-family: "Nunito", sans-serif;
+  color: #000000;
+  font-size: 14px;
+  padding: 10px;
+  outline: none !important;
+}
+
+.main-content__header__search__container select {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100px;
+          flex: 0 0 100px;
+}
+
+@media (max-width: 767px) {
+  .main-content__header__search__container select {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 80px;
+            flex: 0 0 80px;
+    width: 80px;
+  }
+}
+
+.main-content__header__search__container input[type="text"] {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding-left: 0;
+}
+
+.main-content__header__search__container input[type="submit"] {
+  width: 38px;
+  background-image: url(../images/search.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 50%;
+  color: transparent;
+}
+
+.main-content .btn {
+  border-width: 2px;
+  border-color: #009199;
+  font-family: "Nunito", sans-serif;
+  font-weight: 700;
+  border-radius: 4px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: transparent;
+}
+
+.main-content .btn-fill {
+  color: #ffffff;
+  background-color: #009199;
+}
+
+.main-content .main-content__footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media (max-width: 992px) {
+  .main-content .main-content__footer .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.main-content .main-content__footer .container .btn {
+  margin-right: 13px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 992px) {
+  .main-content .main-content__footer .container .btn {
+    margin: 10px !important;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+}
+
+.main-content .main-content__footer .container .btn:last-child {
+  margin-right: 0px;
 }
 /*# sourceMappingURL=style.css.map */
